# rights2roof

./: .dockerignore  .env.example  .gitignore  Deployment.md  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.bak  dockerfile  dump.rdb  entrypoint.py  fly.toml  pyproject.toml  requirements.txt
app/: app.py
app/agents/: executor_agent.py  executor_node.py  pipeline_query.py  planner_agent.py  planner_node.py  rag_agent.py  rag_node.py
app/models/: pipeline_state.py  schemas.py
app/pipelines/: pipeline_graph.py  pipeline_query.py  pipeline_state.py
app/server/: main.py  mcp_server.py
app/services/: redis_db.py  redis_helpers.py  serializers.py  slack_helpers.py  slack_webhook.py
app/test/: test_check_rate.py  test_executor_agent.py  test_langsmith.py  test_pipeline_mcp.py  test_pipeline_state.py  test_planner_agent.py  test_run_pipeline.py  test_tools.py
app/tools/: Gnews_tools.py  bing_rss_tool.py  chat_tool.py  dispute_letter_tools.py  duckduckgo_tool.py  geo_tools.py  google_news_tool.py  legal_scan_tool.py  tavily_tools.py  templates_tool.py  time_tools.py  vector_store_tool.py  wikipedia_tools.py
app/tools/generated_letters/: letter_20250922_234741.txt
documentation/: Error_Logging.md  Geolocation_Tool.md  LangSmith_Planner.md  Planner_Agent.md  Planner_Tools.md  Rag_agent.md  SETUP.md  SlackBot_Thread.md  Slack_FastAPI.md  Slack_Helpers.md  Wikipedia_tool.md  duckduckgo_tool.md  google_news_tool.md  templates_tool.md
redis/: fly.toml
templates_tool/: dispute_rent_increase.json  request_maintenance.json
